# src/modules/Supplier/supplier.routes.ts
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import { createSupplie } from "./supplier.controller";
+
+const router = Router();
+
+router.post("/suppliers", createSupplie);
+
+export default router;
