# src/modules/Supplier/supplier.type.ts
@@ -1,11 +1,10 @@
 export type SupplierCreate = {
-    id?: string;
-    fantasy_name: string;
-    cnpj: string;
-    phone_number?: string;
-    cellPhone_number?: string
-    email?: Array<string>
-}
+  id?: string;
+  fantasy_name: string;
+  cnpj: string;
+  phone_number?: string | undefined;
+  email?: Array<string> | undefined;
+};
 export type SupplierFull = SupplierCreate & {
-    noConformitys: Array<object>
-}
+  noConformitys: Array<object>;
+};
